--- a/practica_proiect/Properties/launchSettings.json
+++ b/practica_proiect/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7282;http://localhost:5188",
+      "applicationUrl": "http://192.168.1.4:7282;http://localhost:7282",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
